# salary_predictor_lab3

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  script.sh
.dvc/: config
data/: hr_data.csv.dvc
models/: .gitignore  salary_model.onnx.dvc
scripts/: train_model.py
src/application/: salary_service.py  services.py
src/domain/: interfaces.py  salary_predictor.py
src/infrastructure/: mock_salary_model.py  onnx_model.py  storage.py
src/presentation/: api.py  cli.py
