[tool.poetry]
name = "salary-prediction-dvc"
version = "0.1.0"
description = "Lab 2: DVC + MinIO"
authors = ["ilya"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
dvc = "^3.50.0"
dvc-s3 = "^3.0.0"
psutil="^5.9.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
scikit-learn = "^1.4.0"
onnxruntime = "^1.17.0"
skl2onnx = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
